# mx-human-sc

./: .gitignore  Cargo.toml  Makefile  README.md  build-wasm.sh  mandos-go-tests.sh
.github/workflows/: actions.yml
api-service/: .eslintrc.js  .gitignore  .prettierrc  README.md  config.env.template  package.json
api-service/model/: addJobTrustedHandlersBody.ts  addressDto.ts  boolDataResponse.ts  bulkPayoutJobBody.ts  errorNotcreateResponse.ts  errorNotexistResponse.ts  errorParameterResponse.ts  errorUnauthorizedResponse.ts  factoryGetBody.ts  gasPayerDto.ts  getResultsBody.ts  intDataResponse.ts  jobAddressDto.ts  jobCreateBody.ts  jobListResponse.ts  jobStatusResponse.ts  manifestValidityBody.ts  manifestValidityResponse.ts  models.ts  pollingUrlResponse.ts  storeJobIntermediateResultsBody.ts  stringDataResponse.ts
job/: Cargo.toml
job-factory/: Cargo.toml
job-factory/abi/: Cargo.toml
job-factory/abi/src/: main.rs
job-factory/interactions/: deploy.interactions.sh
job-factory/meta/: Cargo.toml
job-factory/meta/src/: main.rs
job-factory/src/: job-factory.rs  lib.rs
job-factory/tests/: test_job_factory.rs
job-factory/tests/conftest/: builders.rs  mod.rs  setup.rs
job-factory/wasm/: Cargo.toml
job-factory/wasm/src/: lib.rs
job/src/: base.rs  (+6 more)
tests/: Cargo.toml
tests/mandos/: 1-deploy.scen.json  2-create-job.scen.json  3-setup.scen.json  4-store-intermediate.scen.json  5a-full-pay-out.scen.json  5b-partial-pay-out.scen.json  6a-complete.scen.json  6b-cancel.scen.json  6c-abort.scen.json
tests/tests/: mandos_go_test.rs  mandos_rs_test.rs
(+75 files in other folders)
