[package]
name = "job-factory"
version = "0.1.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.0"
[dependencies.multiversx-sc]
version = "0.39.0"

[dependencies.job]
path = "../job"
