[package]
name = "job-factory-abi"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[dependencies.job-factory]
path = ".."

[dependencies.elrond-wasm]
version = "0.18"
path = "../../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-debug]
version = "0.18"
path = "../../../elrond-wasm-rs/elrond-wasm-debug"
